--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@capacitor/cli": "^8.1.0",
     "@capacitor/core": "^8.1.0",
     "@capacitor/geolocation": "^8.1.0",
+    "@supabase/supabase-js": "^2.98.0",
+    "firebase": "^12.10.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.575.0",
+    "mqtt": "^5.15.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-leaflet": "^5.0.0"
