feat: complete ANSV and INVIAS road safety layers integration

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@capacitor/core": "^8.1.0",
     "@capacitor/geolocation": "^8.1.0",
     "@supabase/supabase-js": "^2.98.0",
+    "esri-leaflet": "^3.0.19",
+    "esri-leaflet-vector": "^4.3.2",
     "firebase": "^12.10.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.575.0",
