feat: add leaflet.heat and implement accident heatmap

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "esri-leaflet-vector": "^4.3.2",
     "firebase": "^12.10.0",
     "leaflet": "^1.9.4",
+    "leaflet.heat": "^0.2.0",
     "lucide-react": "^0.575.0",
     "mqtt": "^5.15.0",
     "react": "^19.2.0",
